--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 }
 
 body{
+  background: url('/img/money1.png') no-repeat center center;
+  background-size: cover;
   background-color: #e5e5e5;
 }
 
